 2005-03-15 Sivaiah Nallagatla <snallagatla@novell.com>

       * addressbook/e-book-backend-exchange.c
       (e_book_backend_exchange_create_contact)
       (e_book_backend_exchange_modify_contact)
       (e_book_backend_exchange_remove_contacts) :
       Make sure new or modified objects are added
       to cache and deleted ones are actually deleted
       from cache.
       Fixes #73712

2005-03-15  Sushma Rai  <rsushma@novell.com>
	
	* camel/camel-exchange-provider.c (exchange_validate_user_cb): Using
	ExchangeParams structure to store the parameters values to read from
	server during user validation, and adding them to camel url.

	* lib/e2k-autoconfig.c (e2k_validate_user): Using ExchangeParams.
	(validate): If the user is validated finding "mailbox" and "owa_path"
	values. Using ExchangeParams for returning the values.

	* lib/e2k-validate.h: Defined ExchangeParams.

2005-03-15  Sarfraaz Ahmed <asarfraaz@novell.com>
 
	* calendar/e-cal-backend-exchange.c (open_calendar): Return proper
	error message when authentication fails. This happens when we start
	evolution in calendar view without remembering the password.

2005-03-15  Sushma Rai  <rsushma@novell.com>

	* shell/e-folder-misc-dialogs.c (do_foreign_folder_dialog): Fixed the
	way e-mail ids were being read from the user name entry.

2005-03-14  Sivaiah Nallagatla <snallagatla@novell.com>

	* addresbook/e-book-backend-excahnge.c
	(e_book_backend_exchange_create_contact)
	(e_book_backend_exchange_modify_contact)
	(e_book_backend_exchange_remove_contacts)
	(e_book_backend_exchange_get_changes)
	(e_book_backend_exchange_get_contact) : added misc. stuff like
	returning proper error code, assigning NULL to out params and not
	using e_data_book_view etc to offline case error handling Don't
	know if it fixes any bug in bugzilla

2005-03-11  Sarfraaz Ahmed <asarfraaz@novell.com>

        * calendar/e-cal-backend-exchange-calendar.c (add_ical) : Make sure we